prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/expected_while.nut
// EXPECT_ERROR: "expected 'while'"
do {
    local x = 42
}
